# internal/models/models.gen.go
@@ -3,34 +3,27 @@
 // Code generated by github.com/oapi-codegen/oapi-codegen/v2 version v2.4.1 DO NOT EDIT.
 package models
 
-// ErrorResponse defines model for ErrorResponse.
-type ErrorResponse struct {
-	// Error Error message
-	Error *string `json:"error,omitempty"`
+// Defines values for ZFSDatasetType.
+const (
+	All        ZFSDatasetType = "all"
+	Bookmark   ZFSDatasetType = "bookmark"
+	Filesystem ZFSDatasetType = "filesystem"
+	Snapshot   ZFSDatasetType = "snapshot"
+	Volume     ZFSDatasetType = "volume"
+)
+
+// ZFSDataset defines model for ZFSDataset.
+type ZFSDataset struct {
+	Available  *string `json:"available,omitempty"`
+	Mountpoint *string `json:"mountpoint,omitempty"`
+	Name       string  `json:"name"`
+	Used       *string `json:"used,omitempty"`
 }
 
-// ZFSDatasetGetReq defines model for ZFSDatasetGetReq.
-type ZFSDatasetGetReq struct {
-	// Name Name of dataset to retrieve
-	Name string `json:"name"`
+// ZFSDatasetType defines model for ZFSDatasetType.
+type ZFSDatasetType string
 
-	// Properties List of properties to retrieve for the dataset
-	Properties []string `json:"properties"`
+// ListZfsDatasetsParams defines parameters for ListZfsDatasets.
+type ListZfsDatasetsParams struct {
+	Type *ZFSDatasetType `form:"type,omitempty" json:"type,omitempty"`
 }
-
-// ZFSDatasetGetResp defines model for ZFSDatasetGetResp.
-type ZFSDatasetGetResp struct {
-	Properties []ZFSDatasetProp `json:"properties"`
-}
-
-// ZFSDatasetProp defines model for ZFSDatasetProp.
-type ZFSDatasetProp struct {
-	// Name Name of the dataset property
-	Name string `json:"name"`
-
-	// Value Value of the dataset property
-	Value string `json:"value"`
-}
-
-// GetZfsGetJSONRequestBody defines body for GetZfsGet for application/json ContentType.
-type GetZfsGetJSONRequestBody = ZFSDatasetGetReq
